[gd_scene load_steps=17 format=2]

[ext_resource path="res://Bola.tscn" type="PackedScene" id=1]
[ext_resource path="res://Atleta.tscn" type="PackedScene" id=2]
[ext_resource path="res://Campo.gd" type="Script" id=3]
[ext_resource path="res://Bola_Fisica.tres" type="PhysicsMaterial" id=4]
[ext_resource path="res://Time.gd" type="Script" id=5]
[ext_resource path="res://Posicao.gd" type="Script" id=6]
[ext_resource path="res://DebugGol.gd" type="Script" id=7]
[ext_resource path="res://Bola.gd" type="Script" id=8]
[ext_resource path="res://Formacao.gd" type="Script" id=9]
[ext_resource path="res://Goleire.gd" type="Script" id=10]
[ext_resource path="res://AreaGol.gd" type="Script" id=11]
[ext_resource path="res://images/grama_.png" type="Texture" id=12]

[sub_resource type="TileSet" id=4]
0/name = "grama_.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 244 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 352, 16 )

[sub_resource type="CircleShape2D" id=3]
radius = 48.0

[node name="Campo" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0 )

[node name="Bola" parent="." instance=ExtResource( 1 )]
position = Vector2( 368, 240 )
physics_material_override = ExtResource( 4 )
contacts_reported = 2
contact_monitor = true
can_sleep = false
script = ExtResource( 8 )

[node name="Paredes" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Paredes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/StaticBody2D"]
position = Vector2( 0, 240 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Paredes"]
position = Vector2( 368, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/StaticBody2D3"]
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Paredes"]
position = Vector2( 352, 480 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/StaticBody2D4"]
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Paredes"]
position = Vector2( 720, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/StaticBody2D2"]
position = Vector2( 0, 180 )
shape = SubResource( 1 )

[node name="TimeEsquerda" type="Node2D" parent="."]
script = ExtResource( 5 )
prefixo_controles = "j2"

[node name="FormacaoA" type="Node2D" parent="TimeEsquerda"]
position = Vector2( 208, 244 )
script = ExtResource( 9 )
velocidade_formacao = 100

[node name="Posicao1" type="Node2D" parent="TimeEsquerda/FormacaoA"]
position = Vector2( 0, -160 )
script = ExtResource( 6 )

[node name="Posicao2" type="Node2D" parent="TimeEsquerda/FormacaoA"]
position = Vector2( 0, 152 )
script = ExtResource( 6 )

[node name="Posicao3" type="Node2D" parent="TimeEsquerda/FormacaoA"]
position = Vector2( -144, 0 )
script = ExtResource( 6 )

[node name="Posicao4" type="Node2D" parent="TimeEsquerda/FormacaoA"]
position = Vector2( 136, 0 )
script = ExtResource( 6 )

[node name="FormacaoB" type="Node2D" parent="TimeEsquerda"]
position = Vector2( 208, 244 )
script = ExtResource( 9 )
velocidade_formacao = 100

[node name="Posicao1" type="Node2D" parent="TimeEsquerda/FormacaoB"]
position = Vector2( -80, -80 )
script = ExtResource( 6 )

[node name="Posicao2" type="Node2D" parent="TimeEsquerda/FormacaoB"]
position = Vector2( 72, 80 )
script = ExtResource( 6 )

[node name="Posicao3" type="Node2D" parent="TimeEsquerda/FormacaoB"]
position = Vector2( -80, 80 )
script = ExtResource( 6 )

[node name="Posicao4" type="Node2D" parent="TimeEsquerda/FormacaoB"]
position = Vector2( 72, -80 )
script = ExtResource( 6 )

[node name="Goleire" parent="TimeEsquerda" instance=ExtResource( 2 )]
modulate = Color( 0.156863, 0.396078, 0.964706, 1 )
position = Vector2( 64, 240 )
mode = 2
mass = 2.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 10 )
velocidade_base = 100
goleire = true

[node name="Atleta1" parent="TimeEsquerda" instance=ExtResource( 2 )]
position = Vector2( 208, 112 )
mode = 2
contacts_reported = 1
contact_monitor = true

[node name="Atleta2" parent="TimeEsquerda" instance=ExtResource( 2 )]
position = Vector2( 208, 344 )
mode = 2
contacts_reported = 1
contact_monitor = true

[node name="Atleta3" parent="TimeEsquerda" instance=ExtResource( 2 )]
position = Vector2( 112, 240 )
mode = 2
contacts_reported = 1
contact_monitor = true

[node name="Atleta4" parent="TimeEsquerda" instance=ExtResource( 2 )]
position = Vector2( 296, 240 )
mode = 2
contacts_reported = 1
contact_monitor = true

[node name="AreaGol" type="Area2D" parent="TimeEsquerda"]
position = Vector2( 0, 240 )
script = ExtResource( 11 )

[node name="SensorGol" type="CollisionShape2D" parent="TimeEsquerda/AreaGol"]
shape = SubResource( 3 )
script = ExtResource( 7 )

[node name="PosicaoGoleire" type="Node2D" parent="TimeEsquerda/AreaGol"]
position = Vector2( 64, 0 )
[connection signal="body_entered" from="Bola" to="Bola" method="_on_Bola_body_entered"]
[connection signal="body_entered" from="TimeEsquerda/Atleta1" to="TimeEsquerda/Atleta1" method="_on_Atleta_body_entered"]
[connection signal="body_entered" from="TimeEsquerda/Atleta2" to="TimeEsquerda/Atleta2" method="_on_Atleta_body_entered"]
[connection signal="body_entered" from="TimeEsquerda/Atleta3" to="TimeEsquerda/Atleta3" method="_on_Atleta_body_entered"]
[connection signal="body_entered" from="TimeEsquerda/Atleta4" to="TimeEsquerda/Atleta4" method="_on_Atleta_body_entered"]
[connection signal="body_entered" from="TimeEsquerda/AreaGol" to="TimeEsquerda/AreaGol/SensorGol" method="_on_GolDireita_body_entered"]
[connection signal="body_entered" from="TimeEsquerda/AreaGol" to="Bola" method="_on_GolDireita_body_entered"]
